# Abalone-Age-Prediction-XHEC-2024-25

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yaml
notebooks/: eda.ipynb  modelling.ipynb  practice-experiment-tracking-subject.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/122726978307783901/: meta.yaml
notebooks/mlruns/122726978307783901/b4b9f1aeb376419992d97bc396057032/: meta.yaml
notebooks/mlruns/122726978307783901/b4b9f1aeb376419992d97bc396057032/tags/: mlflow.runName
notebooks/mlruns/854882595409590822/: meta.yaml
notebooks/mlruns/854882595409590822/94a4258f9e4b4610a5f33bd88d9c13af/: meta.yaml
notebooks/mlruns/854882595409590822/94a4258f9e4b4610a5f33bd88d9c13af/tags/: mlflow.runName
solution/: practice-experiment-tracking-solution.ipynb
src/modelling/: main.py  predicting.py  preprocessing.py  training.py  utils.py
src/web_service/: app_config.py  main.py  utils.py
src/web_service/lib/: inference.py  models.py
src/web_service/local_objects/: dv.pkl  model.pkl
