[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xhec-mlops-project-student"
authors = [
  { name = "Ameya1337", email = "ameya.kulkarni1@hec.edu" },
  { name = "Jaaack99", email = "giacomo.lustri@hec.edu" },
  { name = "NacerH0", email = "nacerhadni@hotmail.fr" },
  { name = "Fmansilla10", email = "felipe.mansilla@hec.edu"},
  { name = "schronic", email = "nicolas.schroeder@hec.edu"}
]
description = "This repository contains the solution for the X-HEC MLOps Project on the industrialization of Abalone age prediction model."
version = "0.0.1"
readme = "README.md"
requires-python = "3.12"

[project.urls]
"Homepage" = "https://github.com/Ameya1337/Abalone-Age-Prediction-XHEC-2024-25"

[tool.setuptools]
packages = ["src"]

# Formatting and linting tools

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.ruff]
# Configure Ruff to match Black's behavior
line-length = 88
select = ["E", "F", "C", "W"]
